kubernetes/apps/monitoring/loki-stack/app/minio-serviceentry.yaml
---
# ServiceEntry for external MinIO server
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-external
  namespace: monitoring
spec:
  hosts:
    - minio-external.local
  ports:
    - number: 9768
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.1.241
---
# DestinationRule for external MinIO
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-external
  namespace: monitoring
spec:
  host: minio-external.local
  trafficPolicy:
    tls:
      mode: DISABLE
